<resources>
    <string name="app_name">MoodTracker</string>
    <string name="title_activity_history">historyActivity</string>
    <string name="good_history">Historique d\'humeur</string>
    <string name="history_text1" >Il y a une semaine</string>
    <string name="history_text2" >Il y a six jours</string>
    <string name="history_text3" >Il y a cinq jours</string>
    <string name="history_text4" >Il y a quatre jours</string>
    <string name="history_text5" >Il y a trois jours</string>
    <string name="history_text6" >Avant-hier</string>
    <string name="history_text7" >Hier</string>
    <string name="description_btn">The message you\'ve registered this day.</string>
    <string name="good">to do bem</string>
    <string name="commentaire_title_bld">Commentaire</string>
    <string name="commentaire_neutral_bld">Annuler</string>
    <string name="commentaire_negative_bld">Valider</string>
    <string name="commentaire_positive_bld">Partager</string>
    <string name="message_title_bld">Numéro</string>
    <string name="message_positive_bld">Envoyer</string>
    <string name="messagemanager_erreur_toast">Veuillez entrer un numéro de téléphone.</string>
    <string name="autocomplet_name_tv">name</string>
    <string name="autocomplet_number_tv">number</string>
</resources>
